--- a/inventaire/src/java/Bundle.properties
+++ b/inventaire/src/java/Bundle.properties
@@ -57,7 +57,7 @@ ViewArticlesLabel_nomArticle=NomArticle:
 ViewArticlesTitle_nomArticle=NomArticle
 ViewArticlesLabel_descriptionArtile=DescriptionArtile:
 ViewArticlesTitle_descriptionArtile=DescriptionArtile
-ListArticlesTitle=List
+ListArticlesTitle=List Articles
 ListArticlesEmpty=(No Articles Items Found)
 ListArticlesDestroyLink=Destroy
 ListArticlesEditLink=Edit
@@ -108,7 +108,7 @@ ViewDestinationLabel_referenceDestination=ReferenceDestination:
 ViewDestinationTitle_referenceDestination=ReferenceDestination
 ViewDestinationLabel_description=Description:
 ViewDestinationTitle_description=Description
-ListDestinationTitle=List
+ListDestinationTitle=List Destinations
 ListDestinationEmpty=(No Destination Items Found)
 ListDestinationDestroyLink=Destroy
 ListDestinationEditLink=Edit
@@ -184,7 +184,7 @@ ViewMouvementLabel_mouvementTo=MouvementTo:
 ViewMouvementTitle_mouvementTo=MouvementTo
 ViewMouvementLabel_mouvementFrom=MouvementFrom:
 ViewMouvementTitle_mouvementFrom=MouvementFrom
-ListMouvementTitle=List
+ListMouvementTitle=List Mouvements
 ListMouvementEmpty=(No Mouvement Items Found)
 ListMouvementDestroyLink=Destroy
 ListMouvementEditLink=Edit
