--- a/inventaire/web/WEB-INF/web.xml
+++ b/inventaire/web/WEB-INF/web.xml
@@ -21,4 +21,24 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <security-constraint>
+        <display-name>tous</display-name>
+        <web-resource-collection>
+            <web-resource-name>tous</web-resource-name>
+            <description/>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>chef</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>MyRealm</realm-name>
+    </login-config>
+    <security-role>
+        <description>Chefs</description>
+        <role-name>chef</role-name>
+    </security-role>
 </web-app>
